# AI-VideoTranslator

./: .dockerignore  .env.example  .gitignore  BLOG.md  README.md  docker-compose.yml  environment.yml  main.py  output_file.srt  pyproject.toml  requirements.txt  transcripts.json  verify_setup.sh
commands/: audio.py  video.py
examples/: translate_example.py
lib/: aws.py  azure.py  extract_vocal_from_audio.py  ffmpeg.py  google.py  ibm.py  json_to_srt.py  speech_recognition.py
lib/aws/: aws_transcript.py  transcript_json_to_srt.py
lib/ffmpeg/: add_subtitles_to_video.py  extract_wav_from_video.py
lib/google/: google_speech_to_text.py
src/: audio_process.py  main.py
src/videotranslator/: __init__.py  cli.py  config.py  logger.py
src/videotranslator/models/: __init__.py  transcription.py
src/videotranslator/services/: __init__.py  ffmpeg.py  subtitle.py  translator.py  whisper.py
src/videotranslator/ui/: __init__.py  progress.py
