[project]
name = "ai-videotranslator"
version = "2.0.0"
description = "Modern CLI tool for video transcription and subtitle generation using open-source AI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "AI VideoTranslator Contributors" }
]
keywords = ["video", "transcription", "subtitles", "ai", "whisper", "ffmpeg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # CLI Framework
    "typer>=0.12.0",
    "rich>=13.7.0",
    "click>=8.1.0",

    # Open Source AI Model (replaces AWS/Google)
    "openai-whisper>=20231117",
    "torch>=2.0.0",

    # Media Processing
    "ffmpeg-python>=0.2.0",

    # Translation
    "httpx>=0.27.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
# Cloud providers (optional, for users who want proprietary services)
cloud = [
    "boto3>=1.34.0",
    "google-cloud-speech>=2.26.0",
    "azure-cognitiveservices-speech>=1.36.0",
]

# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# All extras
all = [
    "ai-videotranslator[cloud,dev]",
]

[project.scripts]
videotranslator = "videotranslator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/videotranslator"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=videotranslator",
    "--cov-report=term-missing",
]
